tests/miniJava/neg/006538_mutation.MiniJava
class java { public static void Main ( String [ ] 0 ) { { } } }
